# DeePDih

./: .gitignore  LICENSE  README.md  pyproject.toml
example/build_library/: build_library.ipynb
example/build_library/molecules/: ejm_31.mol  ejm_42.mol  ejm_49.mol  ejm_55.mol
example/build_library_deepmd/: build_library.ipynb  dp_calculator.py
example/build_library_deepmd/molecules/: ejm_44.mol  ejm_45.mol  ejm_48.mol  jmc_27.mol
example/build_library_deepmd_script/: workflow.py
example/build_library_deepmd_script/molecules/: ejm_46.mol  ejm_50.mol  jmc_23.mol  jmc_28.mol  jmc_30.mol
example/build_library_script/: workflow.py
example/build_library_script/molecules/: ejm_43.mol  ejm_47.mol  ejm_54.mol
example/optimize_one_molecule/: ligand.mol  scan_dihedrals.ipynb
src/deepdih/: __init__.py  app.py  calculators.py  cli.py  operators.py  optimize.py  settings.py
src/deepdih/calculators/: __init__.py  bias.py  dp.py  gromacs.py
src/deepdih/data/: embed_w1.npy
src/deepdih/finetune/: __init__.py  gmx_io.py  paramopt.py
src/deepdih/geomopt/: __init__.py  operators.py  optimize_tools.py  valid.py
src/deepdih/mollib/: __init__.py  builder.py  fragment.py
src/deepdih/preparation/: __init__.py  conformations.py  gromacs.py  resp_charge.py
src/deepdih/utils/: __init__.py  embedding.py  geometry.py  mapping.py  tools.py  topology.py  transform.py
src/deepdih/workflow/: __init__.py  build_library.py
